--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@ layout: null
 
   {% comment %} Styles'n'Scripts {% endcomment %}
   <link rel="stylesheet" type="text/css" href="{{ "/assets/css/screen.css" | relative_url }}" />
-  <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /> -->
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
   {% comment %} Ghost outputs important style and meta data with this tag {% endcomment %}
   {% include ghost_head.html %}
