--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -32,7 +32,7 @@
   </section>
   <footer class="post-meta">
     {% assign author = post.author | default: site.author %}
-    {% assign avatar = site.data.authors[author].avatar %}
+    {% assign avatar = site.data.authors[author].avatar | relative_url %}
     {% if avatar %}<img class="author-thumb" src="{{ avatar }}" alt="{{ author | strip | escape }}" nopin="nopin" />{% endif %}
     {% if author %}{{ author }}{% endif %}
     {% include tags.html tags=post.tags %}
