--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@ layout: null
 
     {% comment %} The tiny footer at the very bottom {% endcomment %}
     <footer class="site-footer clearfix">
-      <section class="copyright"><a href="{{ site.url }}">{{ site.title | strip | escape }}</a> &copy; {{ site.time | date: "%Y" }}</section>
+      <section class="copyright"><a href="{{ site.url | append: site.baseurl }}">{{ site.title | strip | escape }}</a> &copy; {{ site.time | date: "%Y" }}</section>
       <section class="poweredby">Published with <a href="https://jekyllrb.com/">Jekyll</a>, dressed in <a href="https://github.com/TryGhost/Casper">Casper</a> from <a href="https://ghost.org">Ghost</a></section>
     </footer>
 
