--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
   <ul>
     {% for item in site.data.navigations %}
     {% assign default_slug = item.name | downcase %}
-    <li class="nav-{{ item.slug | default: default_slug }}{% if page.url == item.url %} nav-current{% endif %}" role="presentation"><a href="{{ item.url | relative_url }}">{{ item.name }}</a></li>
+    <li class="nav-{{ item.slug | default: default_slug }}{% if page.url == item.url %} nav-current{% endif %}" role="presentation"><a href="{{ item.url }}">{{ item.name }}</a></li>
     {% endfor %}
   </ul>
   {% if site.subscribers %}
